<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--UX String Set-->
    <string name="app_name">Movie App</string>
    <string name="movie_poster">movie_poster</string>
    <string name="data_loading_please_wait">Movie loading, please wait…</string>
    <string name="loading">Loading…</string>
    <string name="poor_connectivity_message">Poor internet connectivity: Please check your connection and pull to refresh.</string>
    <string name="pls_retry">Please try again.</string>
    <string name="pull_to_refresh_notif">Pull to refresh this page.</string>

    <!--Preference String Set-->
    <string name="pref_sort_order_key">sort_order</string>
    <string name="pref_sort_order_title">Movies Sort Order</string>
    <string name="pref_popular_movie_label">Most Popular Movies</string>
    <string name="pref_top_rated_movie_label">Top Rated Movies</string>
    <string name="pref_favorite_movie_label">Favorite Movies</string>
    <string name="pref_popular_movie_value" translatable="false">popular</string>
    <string name="pref_top_rated_movie_value" translatable="false">top_rated</string>
    <string name="pref_favorite_movie_value" translatable="false">favorite</string>

    <!--Other Strings-->
    <string name="keyword_settings">Settings</string>
    <string name="keyword_overview">OVERVIEW</string>
    <string name="keyword_options">Options</string>
    <string name="user_rating">USER RATING</string>
    <string name="release_date">(<xliff:g id="release_date" example="2018/12/12">%s</xliff:g>)</string>
    <string name="keyword_retry">RETRY</string>
    <string name="movie_title_holder">SNAKE IN THE EAGLE SHADOW</string>
    <string name="trailer_1">Trailer 1</string>
    <string name="trailer_unavaliable">Trailer unavailable</string>
    <string name="review_unavaliable">Review unavailable</string>
    <string name="keyword_review">REVIEW</string>
    <string name="keyword_anonymous">Anonymous</string>
    <string name="keyphrase_no_review">No review</string>
    <string name="keyword_favorite">Favorite</string>
    <string name="msg_no_favorite_movie">You have no favorite movie.\nPlease change the sort order.</string>
    <string name="fav_icon">fav_icon</string>
    <string name="play_icon">play_icon</string>

</resources>
