<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        tools:context="com.eemf.sirgoingfar.movie_app.activities.MovieDetailActivity">

        <RelativeLayout
            android:id="@+id/iv_movie_poster_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/dimen_20dp">

                <ProgressBar
                    android:id="@+id/pb_image_loader"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:indeterminate="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/tv_loading_notif_holder"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_loading_notif_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/loading"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/pb_image_loader"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster"
                android:scaleType="fitCenter" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:text="SNAKE IN THE EAGLE SHADOW"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_container" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            tools:text="@string/release_date" />

        <View
            android:id="@+id/header_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginEnd="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_40dp"
            android:layout_marginRight="@dimen/dimen_40dp"
            android:layout_marginStart="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_overview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/keyword_overview"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_divider" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:lineSpacingExtra="@dimen/dimen_1dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_header" />

        <TextView
            android:id="@+id/tv_user_rating_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:text="@string/user_rating"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

        <ProgressBar
            android:id="@+id/pb_user_rating"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:progressDrawable="@drawable/bg_user_rating_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_rating_header" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
